--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --hot"
+    "start": "webpack-dashboard -m -- webpack-dev-server --hot"
   },
   "devDependencies": {
     "css-loader": "^0.26.1",
+    "elm-hot-loader": "^0.5.4",
     "elm-webpack-loader": "^4.2.0",
     "extract-text-webpack-plugin": "beta",
     "node-sass": "^4.3.0",
     "sass-loader": "^4.1.1",
     "webpack": "2.2",
+    "webpack-dashboard": "^0.2.1",
     "webpack-dev-server": "2.2"
   }
 }
